# framebolt-testing

./: .gitignore  CMakeLists.txt  README.md  find_dlls_recursive.ps1  main.c
.github/workflows/: build-and-release.yml
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
android-project/app/src/main/java/com/framebolt/: App.java
android-project/app/src/main/jni/gstreamer/include/: ffi-aarch64.h  spandsp.h  x264_config.h
android-project/app/src/main/jni/gstreamer/include/gstreamer-1.0/ges/: ges-version.h
android-project/app/src/main/jni/gstreamer/include/gstreamer-1.0/gst/: gstenumtypes.h  gstversion.h
android-project/app/src/main/jni/gstreamer/include/gstreamer-1.0/gst/pbutils/: gstpluginsbaseversion.h
android-project/app/src/main/jni/gstreamer/include/gstreamer-1.0/gst/vulkan/: gstvkconfig.h
android-project/app/src/main/jni/gstreamer/include/gstreamer-1.0/gst/webrtc/: webrtc-enumtypes.h
android-project/app/src/main/jni/gstreamer/include/libavutil/: ffversion.h
android-project/app/src/main/jni/gstreamer/include/librsvg-2.0/librsvg/: rsvg-features.h  rsvg-version.h
android-project/app/src/main/jni/gstreamer/include/libxml2/libxml/: xmlversion.h
android-project/app/src/main/jni/gstreamer/include/openssl/: configuration.h
android-project/app/src/main/jni/gstreamer/include/soundtouch/: soundtouch_config.h
android-project/app/src/main/jni/gstreamer/include/spandsp/: telephony.h
android-project/app/src/main/jni/gstreamer/include/vvdec/: sei.h  vvdec.h
android-project/app/src/main/jni/gstreamer/lib/glib-2.0/include/: glibconfig.h
android-project/app/src/main/res/values/: strings.xml
ios-project/: CMakeLists.txt  Info.plist  LaunchScreen.storyboard
ios-project/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos-project/: Info.plist
macos-project/Assets.xcassets/AppIcon.appiconset/: Contents.json
scripts/: bundle_gstreamer_macos.sh  copy-android-gstreamer-libs.sh  make_macos_icons.sh
scripts/_build/android/: build.sh
scripts/_build/ios/: build.sh
scripts/_build/linux/: build.sh
scripts/_build/macos/: build.sh
scripts/_build/windows/: build.ps1
scripts/_finalize/ios/: copy_assets.sh
scripts/_finalize/linux/: copy_assets.sh
scripts/_finalize/macos/: copy_assets.sh
scripts/_finalize/windows/: copy_assets.ps1  remove_libs.ps1
scripts/_misc/: ios_log_paths.sh  merge_compile_commands.sh
scripts/_package/android/: package.sh
scripts/_package/ios/: package.sh
scripts/_package/linux/: package.sh
scripts/_package/macos/: package.sh
scripts/_package/windows/: package.ps1
scripts/_prepare/android/: copy-android-gstreamer-libs.sh  install_gstreamer.sh
scripts/_prepare/common/: prepare_external_repos.sh
scripts/_prepare/ios/: download_gstreamer.sh  install_gstreamer.sh
scripts/_prepare/linux/: install_dependencies.sh
scripts/_prepare/macos/: install_gstreamer.sh
scripts/_prepare/windows/: install_gstreamer.ps1  prepare_external_repos.ps1
src/: main.c  main.cpp
